typescript/checker/tests/conformance/types/primitives/boolean/assignFromBooleanInterface.ts.stderr
error: AssignFailed {
    span: Span {
        lo: BytePos(
            79,
        ),
        hi: BytePos(
            80,
        ),
        ctxt: #0,
    },
    left: Lit(
        TsLitType {
            span: Span {
                lo: BytePos(
                    55,
                ),
                hi: BytePos(
                    59,
                ),
                ctxt: #0,
            },
            lit: Bool(
                Bool {
                    span: Span {
                        lo: BytePos(
                            55,
                        ),
                        hi: BytePos(
                            59,
                        ),
                        ctxt: #0,
                    },
                    value: true,
                },
            ),
        },
    ),
    right: Interface(
        Interface {
            span: Span {
                lo: BytePos(
                    0,
                ),
                hi: BytePos(
                    0,
                ),
                ctxt: #0,
            },
            type_params: None,
            extends: [],
            body: [
                Method(
                    MethodSignature {
                        span: Span {
                            lo: BytePos(
                                0,
                            ),
                            hi: BytePos(
                                0,
                            ),
                            ctxt: #0,
                        },
                        readonly: false,
                        key: Lit(
                            Str(
                                Str {
                                    span: Span {
                                        lo: BytePos(
                                            0,
                                        ),
                                        hi: BytePos(
                                            0,
                                        ),
                                        ctxt: #0,
                                    },
                                    value: Atom('valueOf' type=inline),
                                    has_escape: false,
                                },
                            ),
                        ),
                        computed: false,
                        optional: false,
                        params: [],
                        ret_ty: Some(
                            Keyword(
                                TsKeywordType {
                                    span: Span {
                                        lo: BytePos(
                                            0,
                                        ),
                                        hi: BytePos(
                                            0,
                                        ),
                                        ctxt: #0,
                                    },
                                    kind: TsBooleanKeyword,
                                },
                            ),
                        ),
                        type_params: None,
                    },
                ),
            ],
        },
    ),
    cause: [],
}
 --> $DIR/tests/conformance/types/primitives/boolean/assignFromBooleanInterface.ts:3:1
  |
3 | x = a;
  | ^

